# anemoi-datasets-eeriecloud

./: .gitignore  COMPARISON.md  PLAN.md  README.md  TODO.md  plot_dataset.py  pyproject.toml
recipes/: eerie-ifs-fesom-hist1950-native-test.yaml  eerie-ifs-fesom-hist1950-native.yaml  eerie-ifs-fesom-hist1950-o96-test.yaml  eerie-ifs-fesom-hist1950-o96.yaml  eerie-ifs-fesom-hist1950-test.yaml
src/anemoi_datasets_eeriecloud/: __init__.py  hpc.py  presets.py  regrid.py  source.py  stac.py  variables.py
tests/: test_source.py
